# Trex

./: .gitignore  .gitmodules  LICENSE  README.md  build.gradle  gradle.properties  settings.gradle
demo/android/: build.gradle  proguard-rules.pro
demo/android/src/main/: AndroidManifest.xml
demo/android/src/main/res/layout/: activity_main.xml
demo/android/src/main/res/values/: strings.xml
demo/jvmtest/: build.gradle
demo/test/: build.gradle
maven/io/github/eirv/trex/android/: maven-metadata.xml  maven-metadata.xml.md5  maven-metadata.xml.sha1  maven-metadata.xml.sha256  maven-metadata.xml.sha512
maven/io/github/eirv/trex/android/1.0.0-alpha/: android-1.0.0-alpha.aar  android-1.0.0-alpha.aar.md5  (+8 more)
maven/io/github/eirv/trex/jvm/: maven-metadata.xml  maven-metadata.xml.md5  maven-metadata.xml.sha1  maven-metadata.xml.sha256  maven-metadata.xml.sha512
stub/: build.gradle
stub/src/main/java/android/app/: ActivityThread.java
stub/src/main/java/dalvik/system/: VMRuntime.java
stub/src/main/java/java/lang/: StackTraceElement.java
stub/src/main/java/libcore/io/: Memory.java
stub/src/main/java/sun/misc/: Unsafe.java
trex/android/: build.gradle  consumer-rules.pro  proguard-rules.pro
trex/android/src/main/cpp/: .clang-format  CMakeLists.txt  elf_img.cpp  elf_img.h  log.h  trex.cpp  trex.h
trex/common/io/github/eirv/trex/: BackTraceParser.java  DuplicateItem.java  ExecutableNames.java  FakeBackTrace.java  FastPrintWriter.java  HashObject.java  IdentityObject.java  IntArray.java  MethodTypeCompat.java  Platform.java  StackFrame.java  StackFrameImpl.java  StringPrinter.java  Trex.java  TrexOption.java  TrexPrinter.java  TrexStyle.java  Utils.java  VmMethodKey.java
trex/jvm/: build.gradle
(+35 files in other folders)
